--- a/UserDataTypes/UserDataTypes.vcxproj
+++ b/UserDataTypes/UserDataTypes.vcxproj
@@ -139,7 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Sandwich.cpp" />
     <ClCompile Include="UserDataTypes.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Sandwich.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
