--- a/UserDataTypes/UserDataTypes.vcxproj
+++ b/UserDataTypes/UserDataTypes.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{fefe8460-dcf0-4c0b-9600-4d8d13ef95ab}</ProjectGuid>
     <RootNamespace>UserDataTypes</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>UserDataTypesClassExample</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
