Added Mammal Class

--- a/Database/Database.vcxproj
+++ b/Database/Database.vcxproj
@@ -143,11 +143,13 @@
     <ClCompile Include="Bird.cpp" />
     <ClCompile Include="Database.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Mammal.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animal.h" />
     <ClInclude Include="Bird.h" />
     <ClInclude Include="Database.h" />
+    <ClInclude Include="Mammal.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
